prevent topbar overlapping video element

--- a/app/frontend/style.css
+++ b/app/frontend/style.css
@@ -159,12 +159,14 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
+  display:flex;
+  flex-direction: column;
 }
 
 .video_wrapper video {
-  width: 100%;
-  height: 100%;
+  flex: 1;
   outline:0;
+  height: 0;
 }
 
 .backarrow {
@@ -226,12 +228,6 @@ body {
   position: absolute;
   left: 0px;
   right: 0px;
-}
-
-.video_topbar {
-  position: absolute;
-  z-index: 10;
-  background: rgba(0,0,0,0.5);
 }
 
 .topbar button {
